src/styles/section.css
.content {
  padding: 150px 300px;
  z-index: 0;
}

.content h1 {
  font-size: 3rem;
}
/* ABOUT */

.about {
  margin-top: 100vh;
  background-color: gray;
  min-height: 80vh;

}
.about-img {
  height: 20rem;
  width: auto;
  border-radius: 10px;
}

.about-container {
  display: flex;
  flex-direction: row;
}
.left-about-section {
  
}
.right-about-section {
  
}

/* SERVICES */
.services {
  background-color: #110C11;
  color: whitesmoke;
  min-height: 80vh;
}

/* WORK */

.work-title {
  text-align: center;
}
.work {
  background-color:  gray;
  min-height: 80vh;
}
.work-container {
  display: flex;
  flex-direction: row;

}
.work-img {
  /* display: flex;
  justify-content: right;
  align-items: center; */
  display: block;
  width: 100%;
  height: auto;
  border-radius: 50px;
}
.work-img-container {
  display: flex;
  max-width: 300px;
  box-sizing: border-box;
  border-radius: 50px;
}
.work-img-container:hover {
cursor: pointer;
  transform: scale(1.05);
  transition-duration: .3s;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.work-img-overlay {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  bottom: 10px;
  background: rgb(0, 0, 0);
  background: rgba(0, 0, 0, 0.5); /* Black see-through */
  color: #f1f1f1;
  width: 100%;
  margin:0 auto;
  transition: .5s ease;
  opacity:0;
  color: whitesmoke;
  font-size: 20px;
  padding: 10px;
  
  box-sizing: border-box;
  border-radius: 50px;
}

.work-img-container:hover .work-img-overlay {
  opacity: 1;
  
}

a, a:hover, a:focus, a:active {
  text-decoration: none;
  color: inherit;
}

.reciplan-link:hover {
text-decoration: underline;
}

.contact {
  background-color: #110C11;
  color: whitesmoke;
  display: flex;
  min-height: 80vh;
  flex-direction: column;
}
.contact-info {
  font-size: 1rem;
}
.contact-title {
  text-align: center;
}
.contact-div {
  height: 200px;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
 align-items: left;
}
.contact-container {
 display: flex;
 flex-direction: row;
 justify-content: space-around;
 align-items: center;
 margin-top: 10rem;
}
.contact-form-container {
  order: 2;
}
.contact-info {
  order: 1;
}
.submit-button {
  font-size: 1rem;
  max-width: 70px;
  height: 30px;
  background-color: whitesmoke;
  border-color: grey;
  border-width: 2px;
  border-style: solid;
  border-radius: 5px;
}
.submit-button:hover {
  cursor: pointer;
  background-color: grey;
  color: whitesmoke;
  border-color: grey;
  border-width: 2px;
  border-style: solid;
  border-radius: 5px;
  transition-duration: 0.2s;
}
.footer {
    display: flex;
    justify-content: space-around;
    font-size: 1.5rem;
    padding: 1.5rem 1.2rem 1.5rem;
    -webkit-transition: all .35s ease;
    transition: all .35s ease;
  background-color: #f6f8fA;
}
@media screen and (max-width: 1200px) {
  .content {
    padding: 70px;
    
  }
  h1 {
    text-align: center;
  }
  .footer {
    padding: 1rem 1rem 1rem;
  }
  .contact-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    margin-top: 5rem;
   }
   .contact-info {
    font-size: .7rem;
  }
  
}

